--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Corpse Bride</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Corpse Bride</title>
+  <link rel="stylesheet" href="/screen.css">
+</head>
+
+<body>
+  <header>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="Characters.html">Characters</a>
+      <a href="about.html">About</a>
+    </div>
+  </header>
+  <h1 class="title">Corpse Bride</h1>
+  <img src="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/corpsehed.jpg?itok=0cnYDZLJ&resize=1100x1100"
+    id="pic" alt="Corpse Bride Image" />
+
+  <footer>
+    <p>An animated movie by Tim Burton</p>
+  </footer>
+
+
+</body>
+
 </html>
